# recruitments

./: .env.example  .gitignore  LICENSE  README.md  proxy_code.md  vercel.json
.github/workflows/: rust.yml
backend/: .env  Cargo.toml  gas-repl-key-example.json
backend/data/: data.json
backend/src/: google_api.rs  main.rs
backend/src/applicants/: service.rs
backend/src/auth/: middleware.rs  models.rs  service.rs
frontend/: .env  Cargo.toml  Trunk.toml  build.sh  index.html  netlify.toml  vercel.json
frontend/src/: main.rs  routers.rs
frontend/src/auth/: context.rs  models.rs
frontend/src/components/: admin_dashboard.rs  applicant_form.rs  applicant_list.rs  case_study.rs  dashboard.rs  footer.rs  header.rs  interview_slots.rs  login.rs  process_overview.rs  reset.rs  rounds.rs  theme_toggle.rs
frontend/src/models/: applicant.rs
frontend/src/services/: api.rs
frontend/src/styles/: globals.css
frontend/src/theme/: mod.rs
frontend/utils/: storage.rs
