[package]
name = "recruitment-backend"
version = "0.1.0"
edition = "2024"
author= "yequalsmxplusc"

[dependencies]
actix-web = "4"
actix-identity = "0.5"
actix-web-httpauth = "0.6"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
rust-argon2 = "2.1"