[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = {version = "0.21" , features=["csr"]}
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.6"
wasm-logger= "0.2"
wasm-bindgen-futures = "0.4"
yew-router = "0.18"
web-sys = { version = "0.3", features = [
    "Window", 
    "HtmlInputElement", 
    "Storage",
    "console"
] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
gloo-storage = "0.3"
serde_json= "1.0"